--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jpush-sdk",
-  "version": "3.1.0",
+  "name": "jpush-api-nodejs-client",
+  "version": "0.1.0",
   "description": "JPush's officially supported Node.js client library.",
   "main": "index.js",
   "scripts": {
